[package]
name = "netstat"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
chrono = "0.4.39"
procfs = "0.17.0"
thiserror = "2.0.7"

[[example]]
name = "show_sockets"