[package]
name = "network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "2.0.0"
pnet = "0.35.0"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
nom = "8.0.0-alpha2"
futures = "0.3.30"
