[package]
name = "network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
nom = "8.0.0-alpha2"
pcap = "2.0.0"
pnet = "0.35.0"
thiserror = "2.0.0"
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1"

[[example]]
name = "print_packet"

[dev-dependencies]
tracing-subscriber = "0.3"
