[package]
name = "network"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "=0.4.38"
nom = "=8.0.0"
pcap = "=2.2.0"
pnet = "=0.35.0"
thiserror = "=2.0.12"
tokio = { version = "=1.44.0", features = ["full"] }
tracing = "=0.1.41"

[[example]]
name = "print_packet"

[dev-dependencies]
tracing-subscriber = "=0.3.19"
