[package]
name = "rstracer"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
config = "0.14.0"
duckdb = { version = "1.0.0", features = ["bundled"] }
etc = { path = "../etc"}
lazy_static = "1.5.0"
lsof = { path = "../lsof"}
network = { path = "../network"}
pcap = "2.2.0"
pnet = "0.35.0"
ps = { path = "../ps"}
regex = "1.11.0"
serde = { version = "1.0.208", features = ["derive"] }
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3.18"
uuid = {version = "1.10.0", features = ["v4"] }
